중복이 발생하긴 하지만, 이름 통일
