# gen/http/openapi3.yaml
@@ -101,11 +101,11 @@ paths:
                             $ref: '#/components/schemas/CreateRequestBody'
                         example:
                             user:
-                                name: Dolores fuga asperiores voluptatem aspernatur eum.
                                 password: Sapiente temporibus vel.
                                 payload:
                                     Dolorem delectus fugit.: Quia illum facere distinctio quam sunt.
                                     Et rerum quia odit voluptas repudiandae.: Quo dolores.
+                                username: Dolores fuga asperiores voluptatem aspernatur eum.
             responses:
                 "204":
                     description: No Content response.
@@ -139,11 +139,11 @@ components:
                     $ref: '#/components/schemas/UserInput'
             example:
                 user:
-                    name: Dolores fuga asperiores voluptatem aspernatur eum.
                     password: Sapiente temporibus vel.
                     payload:
                         Dolorem delectus fugit.: Quia illum facere distinctio quam sunt.
                         Et rerum quia odit voluptas repudiandae.: Quo dolores.
+                    username: Dolores fuga asperiores voluptatem aspernatur eum.
             required:
                 - user
         DeleteUserPayload:
@@ -288,10 +288,6 @@ components:
         UserInput:
             type: object
             properties:
-                name:
-                    type: string
-                    description: The name of the user
-                    example: Ut harum dolores quia aut dolorum ut.
                 password:
                     type: string
                     description: The password of the user
@@ -303,15 +299,19 @@ components:
                         Eius consequatur repellendus.: Beatae consequatur.
                         Totam voluptate et nihil maxime consequatur qui.: Excepturi rem ipsum earum quod commodi.
                     additionalProperties: true
+                username:
+                    type: string
+                    description: The name of the user
+                    example: Ut harum dolores quia aut dolorum ut.
             example:
-                name: Nostrum repellat placeat.
                 password: Autem excepturi tenetur.
                 payload:
                     Eaque commodi velit voluptatem dolores sit.: Dolores quam aut consequatur.
                     Labore cum adipisci.: Nulla vel autem.
                     Reprehenderit et qui expedita quis rerum.: Quae corrupti dolore iste iusto voluptas.
+                username: Nostrum repellat placeat.
             required:
-                - name
+                - username
                 - password
 tags:
     - name: user
